force-app/main/default/objects/IBM_Balances__x/IBM_Balances__x.object-meta.xml
<CustomObject>
    <description>IBM_Balances</description>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>IBM_Balances</externalName>
    <label>IBM_Balances</label>
    <pluralLabel>IBM_Balances</pluralLabel>
</CustomObject>