force-app/main/default/objects/IBM_Balances__x/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <description>Credit</description>
    <externalDeveloperName>Credit</externalDeveloperName>
    <label>Credit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>