force-app/main/default/objects/IBM_Balances__x/fields/FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountId__c</fullName>
    <description>FinancialAccountId_</description>
    <externalDeveloperName>FinancialAccountId_</externalDeveloperName>
    <label>FinancialAccountId_</label>
    <length>128</length>
    <type>Text</type>
</CustomField>