force-app/main/default/objects/IBM_Balances__x/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <description>Investment</description>
    <externalDeveloperName>Investment</externalDeveloperName>
    <label>Investment</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>