force-app/main/default/objects/IBM_Balances__x/fields/MaxCreditLine__c.field-meta.xml
<CustomField>
    <fullName>MaxCreditLine__c</fullName>
    <description>MaxCreditLine</description>
    <externalDeveloperName>MaxCreditLine</externalDeveloperName>
    <label>MaxCreditLine</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>