force-app/main/default/objects/IBM_Balances__x/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <description>Mortgage</description>
    <externalDeveloperName>Mortgage</externalDeveloperName>
    <label>Mortgage</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>