force-app/main/default/objects/IBM_Balances__x/fields/StandardAccountBalanceNIS__c.field-meta.xml
<CustomField>
    <fullName>StandardAccountBalanceNIS__c</fullName>
    <description>StandardAccountBalanceNIS</description>
    <externalDeveloperName>StandardAccountBalanceNIS</externalDeveloperName>
    <label>StandardAccountBalanceNIS</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>