force-app/main/default/objects/IBM_Balances__x/fields/StandardAccountBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>StandardAccountBalanceUSD__c</fullName>
    <description>StandardAccountBalanceUSD</description>
    <externalDeveloperName>StandardAccountBalanceUSD</externalDeveloperName>
    <label>StandardAccountBalanceUSD</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>